{{$NEXT}}
   - Add elementIndex method to LibXML::Element. This is valid
     and non-zero after invoking doc.indexElements().
   - Change xmlElement content() access to return a string. This
     is where the element-index (above) is stored.
   - Lock-protect error handling.

0.9.9  2023-02-10T08:23:28+13:00
   - Enable threading in libxml.dll resource for Windows.
     However, LibXML::Config.parser-locking now defaults to True on
     Windows due to unresolved failures in 90threads.t
   - Regress against latest libxml2 blead.
     -- adjust 35huge_mode.t and 60err_prev_chain.t for changes in
        some limits;
     -- xmlElem struct size has changed! Affected tail members of the
        struct have been made private and t/00native.t has been fixed.
   - Build.pm6 -I <include-path> now works on non-Windows platforms
   - Add LibXML::Config.have-iconv method to detect if libxml was built
     with the inconv library for Unicode encoding and decoding
   - Fix some tests to skip for the right reasons; that the library
     was built without iconv or compression, rather than we're running
     under Windows.

0.9.8  2023-02-08T09:09:26+13:00
   - Fix more xmlMalloc() not paired with xmlFree()
   - Block parse(:$io) from running on Windows. I don't think it's
     ever worked and may crash.
   - Add CStruct size tests to t/00native.t

0.9.7  2023-02-07T07:58:24+13:00
   - Implement DLL name demangling to fix installation on Windows #66

0.9.6  2023-02-04T21:04:27+13:00
   - Update prebuilt xml6.dll on Windows
   - Fix mixed use of alloc() & xmlMalloc(). Ensure objects created via
     xmlMalloc() are freed via xmlFree().

0.9.5  2023-02-03T07:52:04+13:00
   - Fix de-ASTfication of the default (xmlns) namespace PR #92 vrurg++
   - Fix xmlBuffer32 and xmlBuf to work with binary data
   - Fix return values on xml6_sax_locator_set_{getPublicId|getSystemId}
   - Refactor of LibXML::_Options get-option() and set-option() methods

0.9.4  2023-01-19T06:26:19+13:00